部分代码修改提交

--- a/sso/sso-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/sso/sso-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,12 +1,19 @@
+## com.styzf.sso.aspect.validated.ValidatedAspect.beforeRegisterValidated start ##
 errorKey.30000=错误：30000，注册验证失败
 errorKey.30001=错误：30001，注册手机验证错误
 errorKey.30002=错误：30002，请输入密码
 errorKey.30003=错误：30003，请输入验证码
-errorKey.30004=错误：30004，
-errorKey.30005=错误：30005，
+errorKey.30004=错误：30004，请刷新验证码重试
+errorKey.30005=错误：30005，验证码错误
+## com.styzf.sso.aspect.validated.ValidatedAspect.beforeRegisterValidated  end  ##
 errorKey.30006=错误：30006，
 errorKey.30007=错误：30007，
 errorKey.30008=错误：30008，
 errorKey.30009=错误：30009，
 errorKey.30010=错误：30010，
 errorKey.30011=错误：30011，
+
+
+com.styzf.sso.util.CodeUtil.codeImage=图片输出失败
+com.styzf.sso.web.StyzfSSOCommonController.securityCode=token获取失败
+com.styzf.sso.web.StyzfSSOCommonController.getCode=未找到对应的cookie
